...
            "state" : "translated",
            "value" : "Image dans l’image automatique"
          }
        }
      }
    },
    "Back" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
...
            "state" : "translated",
            "value" : "Afficher les téléchargements"
          }
        }
      }
    },
    "Duplicate Tab" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dupliquer l’onglet"
          }
...
            "state" : "translated",
            "value" : "Recherche…"
          }
        }
      }
    },
    "Main" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Main"
          }
...
            "state" : "translated",
            "value" : "Déplacer vers un groupe"
          }
        }
      }
    },
    "Move to Space" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Move to Space"
          }
...
            "state" : "translated",
            "value" : "Nouveau groupe"
          }
        }
      }
    },
    "New Group with Tab" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Group with Tab"
          }
...
            "state" : "translated",
            "value" : "Nom du profil"
          }
        }
      }
    },
    "Profiles" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profiles"
          }
...
            "state" : "translated",
            "value" : "Réglages du raccourci"
          }
        }
      }
    },
    "Shortcuts" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Shortcuts"
          }
...
            "state" : "translated",
            "value" : "Groupes d’onglets et onglets fermés récemment"
          }
        }
      }
    },
    "Tabs" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tabs"
          }
...
            "state" : "translated",
            "value" : "Ajouter ou retirer des favoris"
          }
        }
      }
    },
    "Toggle sidebar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Toggle sidebar"
          }
...
            "state" : "translated",
            "value" : "Renommer le groupe…"
          }
        }
      }
    },
    "Expand Group" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Développer le groupe"
          }
...
            "state" : "translated",
            "value" : "Modifier l’espace…"
          }
        }
      }
    },
    "Move Left" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Déplacer vers la gauche"
          }
...
